# syncher

./: README.md  io.github.leolost2605.syncher.yml  meson.build  myapp.yml
.github/workflows/: ci.yml  merge.yml  release.yml
data/: io.github.leolost2605.syncher.desktop.in  io.github.leolost2605.syncher.gschema.xml  io.github.leolost2605.syncher.metainfo.xml.in  meson.build
po/: POTFILES  de.po  io.github.leolost2605.syncher.pot  it.po  nl.po
src/: Application.vala  ErrorView.vala  HomeView.vala  PreferencesWindow.vala  ProgressView.vala  ProgressWidget.vala  WelcomeView.vala  Window.vala
src/Core/: Module.vala  SyncherService.vala
src/Modules/: AppModule.vala  DconfModule.vala  RepoModule.vala
src/Services/: DconfModule.vala  SyncherService.vala
src/WelcomeView/: AbstractWelcomePage.vala  FinishPage.vala  LocationPage.vala  ModulePage.vala  PermissionPage.vala  WelcomePage.vala  WelcomeView.vala
